Added source code and JAR for Workout Logger App